adding register BE

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -21,7 +21,7 @@
                 Bytetools
             </div>
         </div>
-        <form action="/auth" method="post">
+        <form action="/register" method="post">
             <label for="username">
                 <!-- font awesome icon -->
                 <i class="fas fa-user"></i>
