--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -31,6 +31,10 @@
                 <i class="fas fa-lock"></i>
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
+            <label for="email">
+                <i class="fas fa-lock"></i>
+            </label>
+            <input type="email" name="email" placeholder="Email" id="email" required>
             <input type="submit" value="REGISTER">
         </form>
     </div>
