--- a/views/pages/invoicepage.ejs
+++ b/views/pages/invoicepage.ejs
@@ -111,8 +111,8 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <form method = "POST">
-                                    <a href= "/auth" class="nav-link text-white">
+                                <form method="GET">
+                                    <a href="/dashboard" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#speedometer2" />
                                         </svg>
@@ -122,7 +122,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/clients" class="nav-link text-white" aria-current="page">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#people-circle" />
@@ -133,7 +133,7 @@
                             </li>
 
                             <li>
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/invoicepage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#table" />
@@ -144,7 +144,7 @@
                             </li>
 
                             <li>
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/productspage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#grid" />
@@ -152,10 +152,10 @@
                                         Products
                                     </a>
                                 </form>
-                                
+
                             </li>
                             <li>
-                                <form method ="GET">
+                                <form method="GET">
                                     <a href="/paymentspage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#collection" />
@@ -164,7 +164,7 @@
                                     </a>
                                 </form>
                             </li>
-                            
+
                         </ul>
                         <hr>
                         <form action="/logout" method="post">
