--- a/views/pages/loggedin.ejs
+++ b/views/pages/loggedin.ejs
@@ -118,8 +118,8 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <form method = "POST">
-                                    <a href= "/auth" class="nav-link text-white">
+                                <form method="GET">
+                                    <a href="/dashboard" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#speedometer2" />
                                         </svg>
@@ -129,7 +129,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/clients" class="nav-link text-white" aria-current="page">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#people-circle" />
@@ -140,7 +140,7 @@
                             </li>
 
                             <li>
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/invoicepage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#table" />
@@ -151,7 +151,7 @@
                             </li>
 
                             <li>
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/productspage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#grid" />
@@ -159,10 +159,10 @@
                                         Products
                                     </a>
                                 </form>
-                                
+
                             </li>
                             <li>
-                                <form method ="GET">
+                                <form method="GET">
                                     <a href="/paymentspage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#collection" />
