--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -119,8 +119,8 @@
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
                             <li>
-                                <form method="POST">
-                                    <a href="/auth" class="nav-link text-white">
+                                <form method="GET">
+                                    <a href="/dashboard" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#speedometer2" />
                                         </svg>
