--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -191,7 +191,7 @@
                 <h1 class="display-1">New Clients</h1>
 
                 <div class="formcontainer">
-                    <!-- <form action="" target="_blank" method="post"> -->
+                    <form action="" target="_blank" method="post">
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
@@ -258,7 +258,7 @@
 
                         </div>
 
-                    <!-- </form> -->
+                    </form>
                 </div>
             </div>
         </div>
