Fixed the register button

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -11,6 +11,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <script src="js/main.js"></script>
+
 <body>
     <div class="login">
         <div class="row">
@@ -32,7 +33,9 @@
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
             <input type="submit" value="Login">
-            <a href="https://guarded-springs-56328.herokuapp.com/register">REGISTER</a>
+        </form>
+        <form action="/register" method="get">
+            <input type="submit" value="register">
         </form>
     </div>
 </body>
