--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -35,7 +35,7 @@
             <input type="submit" value="Login">
         </form>
         <form action="/register" method="get">
-            <input type="submit" value="register">
+            <input type="submit" value="Register">
         </form>
     </div>
 </body>
