--- a/views/pages/paymentspage.ejs
+++ b/views/pages/paymentspage.ejs
@@ -118,16 +118,18 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#speedometer2" />
-                                    </svg>
-                                    Dashboard
-                                </a>
+                                <form method="GET">
+                                    <a href="/dashboard" class="nav-link text-white">
+                                        <svg class="bi me-2" width="16" height="16">
+                                            <use xlink:href="#speedometer2" />
+                                        </svg>
+                                        Dashboard
+                                    </a>
+                                </form>
                             </li>
 
                             <li class="nav-item">
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/clients" class="nav-link text-white" aria-current="page">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#people-circle" />
@@ -138,7 +140,7 @@
                             </li>
 
                             <li>
-                                <form method = "GET">
+                                <form method="GET">
                                     <a href="/invoicepage" class="nav-link text-white">
                                         <svg class="bi me-2" width="16" height="16">
                                             <use xlink:href="#table" />
