--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,8 @@ body {
         }
 
         .login form input[type="password"],
-        .login form input[type="text"] {
+        .login form input[type="text"], 
+        .login form input[type="email"]{
             width: 310px;
             height: 50px;
             border: 1px solid #dee0e4;
