fixed line 253 in newClient.ejs

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -250,7 +250,7 @@
 
                             </div>
 
-                            <form method="POST" action="/newClient">
+                            <form method="POST" action="/newClient/Added">
                                 <div class="col-12" style="text-align: center;">
                                     <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
                                 </div>
