-overhaulof the invoice page -changed icons on the register

--- a/views/pages/invoicepage.ejs
+++ b/views/pages/invoicepage.ejs
@@ -111,58 +111,44 @@
                         <ul class="nav nav-pills flex-column mb-auto">
 
                             <li>
-                                <form method="GET">
-                                    <a href="/dashboard" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#speedometer2" />
-                                        </svg>
-                                        Dashboard
-                                    </a>
-                                </form>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#speedometer2" />
+                                    </svg>
+                                    Dashboard
+                                </a>
                             </li>
-
                             <li class="nav-item">
-                                <form method="GET">
-                                    <a href="/clients" class="nav-link text-white" aria-current="page">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#people-circle" />
-                                        </svg>
-                                        Clients
-                                    </a>
-                                </form>
-                            </li>
-
-                            <li>
-                                <form method="GET">
-                                    <a href="/invoicepage" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#table" />
-                                        </svg>
-                                        Invoices
-                                    </a>
-                                </form>
-                            </li>
-
-                            <li>
-                                <form method="GET">
-                                    <a href="/productspage" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#grid" />
-                                        </svg>
-                                        Products
-                                    </a>
-                                </form>
-
+                                <a href="#" class="nav-link text-white" aria-current="page">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#people-circle" />
+                                    </svg>
+                                    Clients
+                                </a>
                             </li>
                             <li>
-                                <form method="GET">
-                                    <a href="/paymentspage" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#collection" />
-                                        </svg>
-                                        Payments
-                                    </a>
-                                </form>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#table" />
+                                    </svg>
+                                    Invoices
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#grid" />
+                                    </svg>
+                                    Products
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link text-white">
+                                    <svg class="bi me-2" width="16" height="16">
+                                        <use xlink:href="#collection" />
+                                    </svg>
+                                    Payments
+                                </a>
                             </li>
 
                         </ul>
@@ -175,10 +161,70 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <form id="new-invoice">
+            <!-- Main content section, will be different for all the pages -->
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
+                <h1 class="display-1">Invoices</h1>
+
+                <div class="input-group">
+                    <!-- Button for new Clients -->
+                    <!-- <form action="/newClient.html"> -->
+                    <form action="">
+                        <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
+                    </form>
+
+
+                    <!-- Search Button -->
+                    <div class="form-outline">
+                        <input id="search-input" type="search" placeholder="Search" id="form1" class="form-control" />
+
+                    </div>
+                    <button id="search-button" type="button" class="btn btn-secondary">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+
+                <div class="tablecontainer">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Invoice Number</th>
+                                <th>Status</th>
+                                <th>Client Name</th>
+                                <th>Amount</th>
+                                <th>Balance Remaining</th>
+                                <th>Invoice Data (DD-MM-YYYY)</th>
+                                <th>Payment Deadline (DD-MM-YYYY</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>008</td>
+                                <td>Draft</td>
+                                <td>Maya Baker</td>
+                                <td>$80.00</td>
+                                <td>$80.00</td>
+                                <td>16-07-2022</td>
+                                <td>15-08-2022</td>
+                                <td><a>view</a> <a>edit</a></td>
+                            </tr>
+                            <tr>
+                                <td>008</td>
+                                <td>Draft</td>
+                                <td>Maya Baker</td>
+                                <td>$80.00</td>
+                                <td>$80.00</td>
+                                <td>16-07-2022</td>
+                                <td>15-08-2022</td>
+                                <td><a>view</a> <a>edit</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+
+                    <!-- <form id="new-invoice">
         <table>
             <tr>
                 <td>
@@ -194,9 +240,9 @@
                 </td>
             </tr>
         </table>
-    </form>
+     </form> -->
 
-    <div>
+                    <!-- <div>
         <table id="invoiceinfotable">
             <tr>
                 <th>Invoice Number</th>
@@ -235,6 +281,10 @@
             <a href="#" class="next round">&#8250;</a>
         </div>
 
+     </div> -->
+                </div>
+            </div>
+        </div>
     </div>
 
 
