--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -11,6 +11,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <script src="js/main.js"></script>
+
 <body>
     <div class="login">
         <div class="row">
@@ -32,7 +33,7 @@
             </label>
             <input type="password" name="password" placeholder="Password" id="password" required>
             <label for="email">
-                <i class="fas fa-lock"></i>
+                <i class="fas fa-envelope"></i>
             </label>
             <input type="email" name="email" placeholder="Email" id="email" required>
             <input type="submit" value="REGISTER">
