adding email func

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -265,6 +265,7 @@
                                 <th scope="col">Contact Email</th>
                                 <th scope="col">Contact Phone</th>
                                 <th scope="col">Actions</th>
+                                <th scope="col">Email Invoice</th>
 
                             </tr>
                         </thead>
@@ -307,7 +308,8 @@
                                     <td>
                                         <%= r.phone %>
                                     </td>
-                                    <td>View End Statements</td>
+                                    <td>View End Statements Email</td>
+                                    <td>Send Email</td>
                                 </tr>
                                 <% }); %>
                         </tbody>
