adding email func

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -309,7 +309,7 @@
                                         <%= r.phone %>
                                     </td>
                                     <td>View End Statements Email</td>
-                                    <td>Send Email</td>
+                                    <td><input type="submit" value="Send Email"></td>
                                 </tr>
                                 <% }); %>
                         </tbody>
