-invoice page links working -attempt to fix the addClient

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -252,9 +252,11 @@
                             </div>
 
                             <!-- <form method="POST" action="/newClient/Added"> -->
-                                <div class="col-12" style="text-align: center;">
+                            <div class="col-12" style="text-align: center;">
+                                <form method="POST" action="/newClient/Added">
                                     <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
-                                </div>
+                                </form>
+                            </div>
                             <!-- </form> -->
 
                         </div>
