Debugging addClient and index

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -251,13 +251,13 @@
 
                             </div>
 
-                            <!-- <form method="POST" action="/newClient/Added"> -->
+                            <form method="POST" action="/newClient/Added">
                             <div class="col-12" style="text-align: center;">
                                 <form method="POST" action="/newClient/Added">
                                     <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
                                 </form>
                             </div>
-                            <!-- </form> -->
+                            </form>
 
                         </div>
 
