--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -253,9 +253,9 @@
 
                             <form method="POST" action="/newClient/Added">
                             <div class="col-12" style="text-align: center;">
-                                <form method="POST" action="/newClient/Added">
+                                <!-- <form method="POST" action="/newClient/Added"> -->
                                     <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
-                                </form>
+                                <!-- </form> -->
                             </div>
                             </form>
 
