--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -191,8 +191,8 @@
                 <h1 class="display-1">New Clients</h1>
 
                 <div class="formcontainer">
-                    <!-- <form action="/newClient/Added" method="post"> -->
-                    <form action="/newClient/Added" target="_blank" method="post">
+                    <form action="/newClient/Added" method="post">
+                    <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
