Debugging addClient and index

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -191,7 +191,7 @@
                 <h1 class="display-1">New Clients</h1>
 
                 <div class="formcontainer">
-                    <form action="/newClient/Added" method="post">
+                    <!-- <form action="/newClient/Added" method="post"> -->
                     <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
@@ -251,17 +251,17 @@
 
                             </div>
 
-                            <!-- <form method="POST" action="/newClient/Added"> -->
+                            <form method="POST" action="/newClient/Added">
                             <div class="col-12" style="text-align: center;">
                                 <!-- <form method="POST" action="/newClient/Added"> -->
                                     <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
                                 <!-- </form> -->
                             </div>
-                            <!-- </form> -->
+                            </form>
 
                         </div>
 
-                    </form>
+                    <!-- </form> -->
                 </div>
             </div>
         </div>
