Style Email button

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,8 +308,8 @@
                                     <td>
                                         <%= r.phone %>
                                     </td>
-                                    <td>View End Statements Email</td>
-                                    <td><input type="submit" value="Send Email"></td>
+                                    <td>View End Statements</td>
+                                    <td><input class="btn btn-secondary" type="submit" value="Send Email"></td>
                                 </tr>
                                 <% }); %>
                         </tbody>
