Debugging newClient/Added in index.js

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -197,10 +197,10 @@
                             <div class="col-md-6">
                                 <h2>Client Information</h2>
                                 <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
-                                <input type="text" class="form-control" id="inputClientName">
+                                <input type="text" class="form-control" id="inputClientName" name="inClName">
                                 <br>
                                 <label for="inputClientID" class="form-label">Client ID</label>
-                                <input type="text" class="form-control" id="inputClientID">
+                                <input type="text" class="form-control" id="inputClientID" name="inClID">
 
 
                             </div>
