Debugging newClient/Added in index.js

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -207,19 +207,19 @@
                             <div class="col-md-6">
                                 <h2>Contact Information</h2>
                                 <label for="inputContactName" class="form-label">Contact Name</label>
-                                <input type="text" class="form-control" id="inputContactName">
+                                <input type="text" class="form-control" id="inputContactName" name="inConName">
                                 <br>
                                 <label for="inputEmail" class="form-label">Email-Address</label>
-                                <input type="email" class="form-control" id="inputEmail" placeholder="xyz@gmail.com">
+                                <input type="email" class="form-control" id="inputEmail" name="inEmail" placeholder="xyz@gmail.com">
                                 <br>
                                 <div class="row g-3 gx-5">
                                     <div class="col-4">
                                         <label for="inputAreaCode" class="form-label">Area Code</label>
-                                        <input type="text" class="form-control" id="inputAreaCode">
+                                        <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode">
                                     </div>
                                     <div class="col-8">
                                         <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="inputPhoneNumber">
+                                        <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum">
 
                                     </div>
                                 </div>
@@ -244,7 +244,7 @@
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
                                     <h2>Billing Address</h2>
-                                    <textarea class="form-control" id="billingAddress" classname="Text1" cols="40"
+                                    <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
                                         rows="5"></textarea>
                                     <br>
                                 </div>
