checking view template button

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,8 +308,15 @@
                                     <td>
                                         <%= r.phone %>
                                     </td>
-                                    <td>View End Statements</td>
-                                    <td><input class="btn btn-secondary" type="submit" value="Send Email"></td>
+                                    <td>
+                                        <form>
+                                            <a href="/template">View End Statements</a>
+                                        </form>
+                                    </td>
+                                    <td>
+                                        <input class="btn btn-secondary" type="submit" value="Send Email">
+                                    
+                                    </td>
                                 </tr>
                                 <% }); %>
                         </tbody>
