template test for client id

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -309,7 +309,7 @@
                                         <%= r.phone %>
                                     </td>
                                     <td>
-                                        <form>
+                                        <form method="GET">
                                             <a href="/template">View End Statements</a>
                                         </form>
                                     </td>
