template test for client id

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -310,7 +310,7 @@
                                     </td>
                                     <td>
                                         <form method="GET">
-                                            <a href="/template">View End Statements</a>
+                                            <a href="/template/:clientid">View End Statements</a>
                                         </form>
                                     </td>
                                     <td>
