--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -246,8 +246,15 @@
                     <!-- Search Button -->
                     <div class="form-outline">
                         <input id="search-input" type="search" placeholder="Search" id="form1" class="form-control" />
-
                     </div>
+
+                    <div class ="form-outline">
+                        <form method = "POST" action = "/deleteClient/:clientID">
+                            <p>Delete Client <input type = "text" placeholder = "client id"></p>
+                            
+                        </form>
+                    </div>           
+
                     <button id="search-button" type="button" class="btn btn-secondary">
                         <i class="fas fa-search"></i>
                     </button>
@@ -316,11 +323,7 @@
                                     <td>
                                         <input class="btn btn-secondary" type="submit" value="Send Email">
                                     </td>
-                                    <td>
-                                        <form method = "POST" action = "/deleteClient/:clientID">
-                                            <button class = "btn btn-secondary">Delete Client</button>
-                                        </form>
-                                    </td>
+                                    
                                 </tr>
                                 <% }); %>
                         </tbody>
