testing delete client

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -253,8 +253,8 @@
                     </button>
 
                     <div class ="form-outline">
-                        <form method = "POST" action = "/deleteClient/:clientID">
-                            <p>Delete Client <input type = "text" placeholder = "client id"></p>
+                        <form method = "POST" >
+                            <p>Delete Client: <input action = "/deleteClient/:clientID" type = "text" placeholder = "client id"></p>
                         </form>
                     </div>  
                 </div>
