--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -185,86 +185,90 @@
 
 
 
+                <%rows.forEach(function(r) {%>
+                    <!-- Main contecnt section, will be different for all the pages -->
+                    <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
+                        <h1 class="display-1">View Clients</h1>
 
-            <!-- Main contecnt section, will be different for all the pages -->
-            <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
-                <h1 class="display-1">New Clients</h1>
-
-                <div class="formcontainer">
-                    <form action="/newClient/Added" method="post">
-                    <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
-                        <div class="row g-3 gx-5">
-                            <div class="col-md-6">
-                                <h2>Client Information</h2>
-                                <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
-                                <input type="text" class="form-control" id="inputClientName" name="inClName">
-                                <br>
-                                <label for="inputClientID" class="form-label">Client ID</label>
-                                <input type="text" class="form-control" id="inputClientID" name="inClID">
-
-
-                            </div>
-                            <div class="col-md-6">
-                                <h2>Contact Information</h2>
-                                <label for="inputContactName" class="form-label">Contact Name</label>
-                                <input type="text" class="form-control" id="inputContactName" name="inConName">
-                                <br>
-                                <label for="inputEmail" class="form-label">Email-Address</label>
-                                <input type="email" class="form-control" id="inputEmail" name="inEmail" placeholder="xyz@gmail.com">
-                                <br>
+                        <div class="formcontainer">
+                            <form action="/newClient/Added" method="post">
+                            <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                                 <div class="row g-3 gx-5">
-                                    <div class="col-4">
-                                        <label for="inputAreaCode" class="form-label">Area Code</label>
-                                        <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode">
+                                    <div class="col-md-6">
+                                        <h2>Client Information</h2>
+                                        <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="inClName">
+                                        <br>
+                                        <label for="inputClientID" class="form-label">Client ID</label>
+                                        <input type="text" class="form-control" id="inputClientID" name="inClID">
+
+
                                     </div>
-                                    <div class="col-8">
-                                        <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum">
+                                    <div class="col-md-6">
+                                        <h2>Contact Information</h2>
+                                        <label for="inputContactName" class="form-label">Contact Name</label>
+                                        <input type="text" class="form-control" id="inputContactName" name="inConName">
+                                        <br>
+                                        <label for="inputEmail" class="form-label">Email-Address</label>
+                                        <input type="email" class="form-control" id="inputEmail" name="inEmail" placeholder="xyz@gmail.com">
+                                        <br>
+                                        <div class="row g-3 gx-5">
+                                            <div class="col-4">
+                                                <label for="inputAreaCode" class="form-label">Area Code</label>
+                                                <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode">
+                                            </div>
+                                            <div class="col-8">
+                                                <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                                                <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum">
+
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <label for="inlineRadioOptions" class="form-label">Prefered Contact</label>
+                                        <br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" value="Email">
+                                            <label class="form-check-label" for="inlineRadio1">Email</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="Phone">
+                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                        </div>
+
+
 
                                     </div>
-                                </div>
-                                <br>
-                                <label for="inlineRadioOptions" class="form-label">Preffered Contact</label>
-                                <br>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio1" value="Email">
-                                    <label class="form-check-label" for="inlineRadio1">Email</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio2" value="Phone">
-                                    <label class="form-check-label" for="inlineRadio2">Phone</label>
-                                </div>
 
+                                    <div class="row g-3 gx-5">
+                                        <div class="col-md-12">
+                                            <h2>Billing Address</h2>
+                                            <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
+                                                rows="5"></textarea>
+                                            <br>
+                                        </div>
 
+                                    </div>
 
-                            </div>
+                                    <!-- <form method="POST" action="/newClient/Added"> -->
+                                    <div class="col-12" style="text-align: center;">
+                                        <!-- <form method="POST" action="/newClient/Added"> -->
+                                            <button id="addClient" type="submit" class="btn btn-secondary">Edit Client</button>
+                                            <form method="post" action ='/deleteclient/<%= r.clientid%>'>
+                                                <button class ="btn btn-secondary">Delete Client</button>
+                                            </form>
+                                        <!-- </form> -->
+                                    </div>
+                                    <!-- </form> -->
 
-                            <div class="row g-3 gx-5">
-                                <div class="col-md-12">
-                                    <h2>Billing Address</h2>
-                                    <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                        rows="5"></textarea>
-                                    <br>
                                 </div>
 
-                            </div>
-
-                            <!-- <form method="POST" action="/newClient/Added"> -->
-                            <div class="col-12" style="text-align: center;">
-                                <!-- <form method="POST" action="/newClient/Added"> -->
-                                    <button id="addClient" type="submit" class="btn btn-secondary">Add Client</button>
-                                <!-- </form> -->
-                            </div>
-                            <!-- </form> -->
-
+                            </form>
                         </div>
-
-                    </form>
-                </div>
+                    </div>
+                <% }); %>
             </div>
-        </div>
     </div>
 
 </body>
