--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -323,8 +323,8 @@
                                         <input class="btn btn-secondary" type="submit" value="Send Email">
                                     </td>
                                     <td>
-                                        <form method="GET" action = "/viewclient/<%= r.clientid%>">
-                                            <input class="btn btn-secondary" type="submit" value="view client">
+                                        <form method="GET">
+                                            <input href="/viewclient/<%= r.clientid%>" class="btn btn-secondary" type="submit" value="view client">
                                         </form>
                                     </td>
                                     
