--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -323,11 +323,9 @@
                                         <input class="btn btn-secondary" type="submit" value="Send Email">
                                     </td>
                                     <td>
-                        
-                                        <a href="/viewclient/<%= r.clientid%>" class = "btn btn-secondary">
+                                        <a href="/viewclient/<%= r.clientid%>">
                                             view client
                                         </a>
-                                        
                                     </td>
                                     
                                 </tr>
