--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -323,10 +323,11 @@
                                         <input class="btn btn-secondary" type="submit" value="Send Email">
                                     </td>
                                     <td>
-                                        <a href="/viewclient/<%= r.clientid%>">
+                                        <a href="/viewclient/<%= r.clientid%>" class = "btn btn-secondary">
                                             view client
                                         </a>
                                     </td>
+                                    <%= r %>
                                     
                                 </tr>
                                 <% }); %>
