testing edit client

--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -257,7 +257,7 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <div class="col-12" style="text-align: center;">
                                         <!-- <form method="POST" action="/newClient/Added"> -->
-                                            <form method = "GET" action = "/editClient/:clientID">
+                                            <form method = "GET" action = "/editClient/<%= r.clientid%>">
                                                 <button id="addClient" type="submit" class="btn btn-secondary">Edit Client</button>
                                             </form>
                                             
