--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -257,7 +257,9 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <div class="col-12" style="text-align: center;">
                                         <!-- <form method="POST" action="/newClient/Added"> -->
-                                           <a href="/editClient/<%= r.clientid%>" class = "btn btn-secondary">View Client</a>
+                                            <form action = "/editClient/<%= r.clientid%>">
+                                                <button type="submit" class="btn btn-secondary">Edit Client</button>
+                                            </form>
                                             
                                             <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
                                                 <button class ="btn btn-secondary">Delete Client</button>
