--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -257,7 +257,7 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <div class="col-12" style="text-align: center;">
                                         <!-- <form method="POST" action="/newClient/Added"> -->
-                                            <button href ="/editClient/<%= r.clientid%>" type="submit" class="btn btn-secondary">Edit Client</button>
+                                            <a href ="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
                                             
                                             <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
                                                 <button class ="btn btn-secondary">Delete Client</button>
